fixes and more fixes

--- a/os/components/argocdproj/test-project.yaml
+++ b/os/components/argocdproj/test-project.yaml
@@ -2,5 +2,5 @@ apiVersion: argoproj.io/v1alpha1
 kind: AppProject
 metadata:
   name: test-project
-  namespace: openshift-githops
+  namespace: openshift-gitops
 spec: {}
